# aviasales-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
airlanse_book/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  views.py
airlanse_book/migrations/: 0001_initial.py  0002_flightmodel_is_archived.py  0003_alter_flightmodel_flight_status.py
airlanse_book/services/: buy_ticket.py  pdf_gen.py
aviasales/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
